jest --watchAll, for continuos testing.

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "testing-demo": "file:"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest --watchAll"
   },
   "keywords": [],
   "author": "",
